--- a/index.html
+++ b/index.html
@@ -3,15 +3,99 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/global.css" />
-    <title>Projeto Responsivo</title>
+    <title>Digital Store - Criar Conta</title>
+    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="/styles/responsive.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
-    <header>
-      <a href="#">
-        <img src="./assets/logo (1).svg" alt="Logo Digital College" />
-        <span>Digital College</span>
-      </a>
+    <header class="header">
+      <img src="/assets/logo (1).svg" alt="Digital Store" class="logo" />
     </header>
+
+    <main class="container">
+      <section class="form-section">
+        <div class="title-section">
+          <h1>Crie sua conta</h1>
+          <p>Já possui uma conta? Entre<a href="#"> aqui</a>.</p>
+        </div>
+
+        <form>
+          <label for="email">Email *</label>
+          <input type="email" id="email" placeholder="Insira seu email" />
+          <button type="submit" class="btn">Criar Conta</button>
+        </form>
+
+        <p class="social-text">Ou faça login com</p>
+        <div class="social-login">
+          <i class="fa-brands fa-google" style="color: #c10606"></i>
+          <i class="fa-brands fa-facebook" style="color: #0f8ef0"></i>
+        </div>
+      </section>
+      <div class="tenis">
+        <img
+          src="assets/image-removebg-preview.png"
+          alt="Tênis"
+          class="tenis-Lamelo-Ball-Rick-and-Morty"
+        />
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer-logo">
+        <img
+          src="assets/logo (1).svg"
+          alt="Digital Store"
+          class="logo-footer"
+        />
+        <span>Digital Store</span>
+      </div>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore.
+      </p>
+
+      <div class="footer-links">
+        <div>
+          <h4>Informação</h4>
+          <ul>
+            <li><a href="#">Sobre Drip Store</a></li>
+            <li><a href="#">Segurança</a></li>
+            <li><a href="#">Wishlist</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Trabalhe conosco</a></li>
+            <li><a href="#">Meus Pedidos</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h4>Categorias</h4>
+          <ul>
+            <li><a href="#">Camisetas</a></li>
+            <li><a href="#">Calças</a></li>
+            <li><a href="#">Bonés</a></li>
+            <li><a href="#">Headphones</a></li>
+            <li><a href="#">Tênis</a></li>
+          </ul>
+        </div>
+
+        <div>
+          <h4>Contato</h4>
+          <p>
+            Av. Santos Dumont, 1510 - 1 andar - Aldeota, Fortaleza - CE,
+            60150-161
+          </p>
+          <p>(85) 3051-3411</p>
+        </div>
+      </div>
+
+      <p class="copyright">© 2022 Digital College</p>
+    </footer>
   </body>
 </html>
